# nonebot-plugin-npu

./: .gitignore  LICENSE  README.md  __init__.py  nwpu_electric.py  nwpu_query.py  pyproject.toml  utils.py
nonebot_plugin_npu/: __init__.py  command.py  config.py  draw_course_schedule_pic.py  draw_empty_classroom_pic.py  nwpu_electric.py  nwpu_query.py  schedule.py  test.py  utils.py
nonebot_plugin_npu/jwxt/: get_new_cookie_Fkjfy9yPdPQuP.py  rs6.js
