[tool.poetry]
name = "nonebot-plugin-npu"
version = "0.1.14"
description = "翱翔门户成绩监控插件，能获取成绩、排名、绩点，当出现新成绩时推送给使用者"
authors = ["qllokirin"]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "npu", "nwpu"]

[tool.poetry.dependencies]
python = "^3.9"
rsa = "^4.9"
openpyxl = "^3.1.5"
nonebot2 = "^2.3.3"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-waiter = "^0.8.0"
nonebot-adapter-onebot = "^2.4.5"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
imgkit = ">=0.1.5, !=1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
